# RemoteCat

./: .gitignore  .gitmodules
FreeRDPGlue/: CMakeLists.txt
FreeRDPGlue/cmake/: FreeRDP.cmake
FreeRDPGlue/src/: CMakeLists.txt  cliprdr.c  cliprdr.h  context_update.c  context_update.h  glue.c  glue.h  glue_update.h  main.c  rdpgfx.c  rdpgfx.h
Protocol/: Common.proto  Rdp.proto
RemoteAccessGateway/: RemoteAccessGateway.sln
RemoteAccessGateway/Gateway/: Gateway.csproj  HttpResponseException.cs  HttpResponseExceptionFilter.cs  Startup.cs
RemoteAccessGateway/Gateway/Api/: ErrorController.cs  RdpController.cs
RemoteAccessGateway/Gateway/Pages/: Index.cshtml  Index.cshtml.cs
RemoteAccessGateway/Gateway/Properties/: launchSettings.json
RemoteAccessGateway/Gateway/_Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
RemoteAccessGateway/RdpBridge/: AnonymousPipeChannel.cs  DisposableNative.cs  FreeRdpGlue.cs  FreeRdpGlueNative.cs  LocalChannel.cs  LogService.cs  MarshalHelper.cs  ObjectEvent.cs  Program.cs  RdpBridge.cs  RdpBridge.csproj
RemoteAccessGateway/RdpBridge/Properties/: launchSettings.json
RemoteAccessGateway/RdpBridge/Protocol/: Common.cs  Rdp.cs
RemoteAccessGateway/RdpBridgeTests/: FreeRdpGlueTests.cs  Program.cs  RdpBridgeTests.cs  RdpBridgeTests.csproj  UnitTest1.cs
devtool/: build_protobuf.cmd  build_protobuf.ps1  connection.txt  help.txt  install_freerdp.cmd  install_freerdp.ps1  setup_freerdpglue.cmd  setup_freerdpglue.ps1  start_dev.cmd  start_dev.ps1  start_env.cmd
(+4 files in other folders)
